Fix navbar and improve on mobile

--- a/components/Embed/Embed.module.scss
+++ b/components/Embed/Embed.module.scss
@@ -1,8 +1,15 @@
+@import "../../styles/breakpoints.scss";
+
 .embed {
   display: grid;
-  grid-template-columns: max-content auto;
+  grid-template-columns: 75px auto;
   column-gap: 1rem;
   row-gap: 0.5rem;
+
+  @include responsive {
+    grid-template-columns: 45px auto;
+    column-gap: 0.5rem;
+  }
 
   .avatar {
     grid-area: 1 / 1 / 3 / 2;
@@ -14,6 +21,10 @@
     .name {
       color: #3fe064;
       font-size: 1.2rem;
+
+      @include responsive {
+        font-size: 1rem;
+      }
     }
 
     .bot {
@@ -21,6 +32,10 @@
       padding: 2px 6px;
       border-radius: 4px;
       margin-left: 0.5rem;
+
+      @include responsive {
+        font-size: 0.8rem;
+      }
     }
   }
 
@@ -32,10 +47,19 @@
     padding: 1rem;
     width: fit-content;
     min-width: 30rem;
+
+    @include responsive {
+      width: 100%;
+      min-width: 100%;
+    }
   }
 
   .embedContentTitle {
     margin: 0;
+
+    @include responsive {
+      font-size: 1.3rem;
+    }
   }
 
   .embedButton {
