--- a/pages/general/Home.module.scss
+++ b/pages/general/Home.module.scss
@@ -8,6 +8,7 @@ section.home {
   p {
     margin-top: 1rem;
     margin-bottom: 0px;
+    line-height: 1.5rem;
   }
 
   ul {
